src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Salsa&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "slick-carousel/slick/slick.css";
@import "slick-carousel/slick/slick-theme.css";

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

html {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

.scrollbar-hide {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

.shadowbox-about {
  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.08);
}

/* <----------------- Artilce Styles----------------------> */
/* <---------------- file is in pages named [slug].tsx------------> */

.postArticle > figure > img {
  padding: 5px 0 10px 0;
}

.postArticle > figure > figcaption > em {
  font-size: 13px;
  text-align: center !important;
  padding: 5px 0 5px 0;
  display: flex;
  justify-content: center;
}

.postArticle > h1 {
  font-size: 41px;
  padding: 15px 0 15px 0;
}
.postArticle > h2 {
  font-size: 30px;
  padding: 13px 0 13px 0;
}

@media screen and (max-width: 600px) {
  .postArticle > h2 {
    font-size: 24px;
  }
  .postArticle > p {
    font-size: 14px;
  }
  .postArticle > p > strong {
    font-size: 16px;
  }
}

.postArticle > p {
  font-size: 16px;
  padding: 1.5px 0 15px 0;
}

.postArticle > p > strong {
  font-size: 18px;
}

.postArticle > p > a {
  color: blue;
  text-decoration: underline;
}

.postArticle > p > a:hover {
  transform: scale(1.1);
  transition-duration: 1s;
  font-size: 16px;
}

/* <----------------- Artilce Styles----------------------> */

